<resources>
    <string name="app_name">ANEX Tour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Туристическая компания "ANEX Tour"</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="drawer_open" />
    <string name="drawer_close" />

    <string name="admin_profile">Администратор</string>
    <string name="user_profile">Пользователь</string>
    <string name="select_profile">Выберите профиль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login">Войти</string>

    <string-array name="sections_array">
        <item>Достопримечательности</item>
        <item>Активности</item>
        <item>Маршруты</item>
    </string-array>
</resources>