<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_select_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/select_profile"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginTop="130dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/profile_selection_layout"
        android:layout_marginBottom="15dp"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/profile_selection_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_select_profile"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_admin"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_button_admin"
                android:contentDescription="@string/admin_profile"
                android:scaleType="centerCrop"
                android:src="@drawable/admin" />

            <TextView
                android:id="@+id/text_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/admin_profile"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_user"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_button_user"
                android:contentDescription="@string/user_profile"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/text_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/user_profile"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_selection_layout"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:background="@drawable/edittext_background"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/top_strip_gradient"
        android:visibility="gone"/>
</RelativeLayout>
